plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    mavenCentral()
    maven { url 'https://maven.blamejared.com' }
    maven { url 'https://maven.theillusivec4.top' }
}

group = 'uk.kihira'
archivesBaseName = 'Tails'
version = '1.19.2-1.0.0'

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.2-43.1.25'

    //compileOnly fg.deobf('vazkii.botania:Botania:1.18.2-434:api')
    //runtimeOnly fg.deobf('vazkii.botania:Botania:1.18.2-434')
    runtimeOnly fg.deobf('vazkii.patchouli:Patchouli:1.19.2-76')
    runtimeOnly fg.deobf('top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0')
}

minecraft {
    mappings channel: 'parchment', version: '2022.09.04-1.19.2'
	accessTransformer = file("$rootDir/src/main/resources/META-INF/accesstransformer.cfg")

    runs {
        client {
            workingDirectory project.file('run')

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            mods {
                tails {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')

            mods {
                tails {
                    source sourceSets.main
                }
            }
        }
    }
}

jar {
    manifest {
        attributes([
            'Specification-Title': 'Tails',
            'Specification-Vendor': 'Kihira',
            'Specification-Version': '1',
            'Implementation-Title': project.name,
            'Implementation-Version': "${version}",
            'Implementation-Vendor' : 'EnderTurret',
            'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
            artifact sourcesJar

            pom {
                name = 'Tails'
                description = 'For all your taily needs.'
            }

            pom.withXml {
                asNode().dependencies.dependency.each { dep ->
                    if (dep.artifactId.last().value().last().contains('forge'))
                        dep.parent().remove(dep)
                }
            }
        }
    }
}